# NdkStudy

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/caiy/study/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: study-lib.cpp
app/src/main/cpp/cplusstudy/: cPlusStudy.cpp
app/src/main/cpp/cstudy/: cInclude.cpp  cStudy.cpp
app/src/main/cpp/fmod/: fmod-lib.cpp
app/src/main/cpp/jnistudy/: jniStudy.cpp
app/src/main/cpp/playerstudy/: playerStudy.cpp
app/src/main/java/com/caiy/study/: MainActivity.java
app/src/main/java/com/caiy/study/activity/: CPlusStudyActivity.java  CStudyActivity.java  FmodActivity.java  HelloActivity.java  JniStudyActivity.java  PlayerStudyActivity.java
app/src/main/java/com/caiy/study/bridge/: CPlusStudyBridge.java  CStudyBridge.java  FmodBridge.java  HelloBridge.java  JniStudyBridge.java  PlayerStudyBridge.java
app/src/main/java/com/caiy/study/util/: ThreadUtil.java
app/src/main/java/com/caiy/study/view/: VideoView.java
app/src/main/res/drawable/: item_bg.xml
app/src/main/res/layout/: activity_c_plus_study.xml  activity_c_study.xml  activity_fmod.xml  activity_jni_study.xml  activity_main.xml  activity_player_study.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/caiy/study/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
